# api-security-scanner

./: .gitignore  EXTERNAL_VALIDATION.md  LICENSE  README.md  pyproject.toml
.github/workflows/: scan.yml
demo_apps/: README.md
demo_apps/bola_only/: README.md  app.py
demo_apps/mass_assignment_only/: README.md  app.py
demo_apps/secure/: README.md  app.py
demo_apps/vulnerable/: README.md  app.py
demo_bola_only_api/: README.md  app.py
demo_mass_assignment_only_api/: README.md  app.py
demo_secure_api/: README.md  app.py
demo_vulnerable_api/: README.md  app.py
examples/: openapi.yaml
src/apisec/: __init__.py  cli.py  report.py  scanner.py  spec_loader.py
src/apisec/checks/: __init__.py  base.py  bola.py  broken_auth.py  excessive_data_exposure.py  mass_assignment.py  missing_auth.py  write_bola.py
tests/: conftest.py  test_bola.py  test_broken_auth.py  test_checks_base.py  test_cli.py  test_demo_api.py  test_demo_bola_only_api.py  test_demo_mass_assignment_only_api.py  test_demo_secure_api.py  test_excessive_data_exposure.py  test_mass_assignment.py  test_missing_auth.py  test_scan_all_targets.py  test_scanner.py  test_spec_loader.py  test_write_bola.py
