[project]
name = "apisec-scanner"
dynamic = ["version"]
description = "A lightweight scanner that tests REST APIs against the OWASP API Security Top 10"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sleepcat" }]
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "pyjwt>=2.8",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
apisec = "apisec.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/apisec/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/apisec"]

[tool.ruff]
line-length = 100
