[project]
name = "apisec-scanner"
dynamic = ["version"]
description = "A lightweight scanner that tests REST APIs against the OWASP API Security Top 10"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sleepcat" }]
dependencies = [
    "requests>=2.31",
    "pyyaml>=6.0",
    "pyjwt>=2.8",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    # Demo vulnerable API (target for testing the scanner end-to-end).
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.scripts]
apisec = "apisec.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/apisec/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/apisec"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
# The scanner package (apisec) is installed via `pip install -e`, but the
# demo_vulnerable_api lives at the repo root as a test fixture (not shipped),
# so add the root to the import path for tests.
pythonpath = ["."]
testpaths = ["tests"]
